<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Payment">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:orientation="vertical"
                    android:background="@color/colorBackground">

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        app:srcCompat="@drawable/payment"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/payment_gopay_description"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="310dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    app:cardCornerRadius="15dp"
                    android:layout_marginTop="160dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorPrimary"
                                android:textStyle="bold"
                                android:text="@string/Points"/>

                            <TextView
                                android:id="@+id/Points"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorPrimary"
                                android:textSize="20dp"
                                android:textStyle="bold"
                                android:text="@string/numberOfPoint"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorPrimary"
                                android:textStyle="bold"
                                android:text="@string/Saldo"/>

                            <TextView
                                android:id="@+id/Saldo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorPrimary"
                                android:textStyle="bold"
                                android:textSize="20dp"
                                android:text="@string/SaldoGoPay"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorPrimary"
                                android:textStyle="bold"
                                android:text="@string/Rewards"/>

                            <TextView
                                android:id="@+id/Reward"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorPrimary"
                                android:textStyle="bold"
                                android:textSize="20dp"
                                android:text="@string/numberOfRewards"/>

                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="310dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    app:cardCornerRadius="15dp"
                    android:layout_marginTop="330dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:clickable="true">

                        <ImageView
                            android:id="@+id/IconLogout"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_margin="20dp"
                            android:background="@drawable/background_icon"
                            android:padding="10dp"
                            app:srcCompat="@drawable/ic_voucher" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="300dp"
                    android:textSize="20dp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:text="@string/voucher"/>
            </RelativeLayout>
</LinearLayout>