<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Account">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <ImageView
        android:id="@+id/ProfilPicture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        android:background="@drawable/background_icon"
        app:srcCompat="@drawable/ic_account"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

       <TextView
           android:id="@+id/userneme"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/username"
           android:textStyle="bold"
           android:textSize="30dp"
           android:layout_marginTop="40dp"
           />

        <TextView
            android:id="@+id/Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:text="@string/email"/>

        </LinearLayout>

    </LinearLayout>

    <view
        android:layout_width="360dp"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:background="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:gravity="center"
            app:srcCompat="@drawable/ic_settings_black_24dp"/>

        <TextView
            android:id="@+id/Setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/setting"
            android:textSize="20dp" />

    </LinearLayout>

    <view
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:gravity="center"
            app:srcCompat="@drawable/ic_help_black_24dp"/>

        <TextView
            android:id="@+id/HelpCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/HelpCenter"
            android:textSize="20dp" />

    </LinearLayout>

    <view
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:gravity="center"
            app:srcCompat="@drawable/logout"/>

        <TextView
            android:id="@+id/Logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/logout"
            android:textSize="20dp" />

    </LinearLayout>

    <view
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"/>

</LinearLayout>